package interfaces;

public interface Movable {
    void move();
    void stopMoving();
    double getCurrentSpeed();
}